testsuite/tests/typecheck/should_fail/T13506.stderr

T13506.hs:16:12: error:
    • Couldn't match type ‘Char’ with ‘()’
        required by a functional dependency between:
          constraint ‘FunDep [Char] ()’ required by a use of ‘singleton’
          instance ‘FunDep [a] a’ at T13506.hs:5:10-21
    • In the expression: singleton ()
      In an equation for ‘illTyped’: illTyped = singleton ()
